added a (raw) working Cisco ASA config. Autoconfiguration still incoming.

--- a/client.cfg
+++ b/client.cfg
@@ -3,9 +3,9 @@
 target = client
 #target = cloud
 
-#location at SHI
+#location at [company]
 [cloud]
-#IP and netmask on SHI VLAN
+#IP and netmask on VLAN
 internal-ip = 10.0.1.1
 internal-netmask = 255.255.255.0
 #or
@@ -24,6 +24,7 @@ type = tunnel
 #authby = rsasig
 #or, to use psk:
 #simple psk: dd if=/dev/random count=1000 | md5sum
+#CHANGE THESE ALL
 authby = psk
 psk-secret = 69116c07213b877f5cd9ed96c7796be4 
 #Change to override automatic detection
