--- a/cloud.cfg
+++ b/cloud.cfg
@@ -3,9 +3,9 @@
 #target = client
 target = cloud
 
-#location at SHI
+#location at [company]
 [cloud]
-#IP and netmask on SHI VLAN
+#IP and netmask on VLAN
 internal-ip = 10.0.1.1
 internal-netmask = 255.255.255.0
 #or
@@ -28,6 +28,7 @@ authby = psk
 psk-secret = 69116c07213b877f5cd9ed96c7796be4 
 #Change to override automatic detection
 #ipsec-interface = eth2
+#CHANGE THESE ALL
 ipsec-interface = automatic
 
 #uncomment to allow automatic RSA key generation
