added more defaults
also changed "oe" to the more verbose "opportunistic-encryption" in the
configs

--- a/cloud.cfg
+++ b/cloud.cfg
@@ -18,7 +18,7 @@ external-ip = 172.3.2.2
 #Do not change - mostly direct ipsec variables
 version = 2.0
 protostack = klips
-oe = disabled
+opportunistic-encryption = disabled
 nat-traversal = disabled
 type = tunnel
 #authby = rsasig
