--- a/client.cfg
+++ b/client.cfg
@@ -18,18 +18,19 @@ external-ip = 172.3.2.2
 #Do not change - mostly direct ipsec variables
 version = 2.0
 protostack = klips
-oe = disabled
+opportunistic-encryption = disabled
 nat-traversal = disabled
 type = tunnel
+#Change to override automatic detection
+#ipsec-interface = eth2
+ipsec-interface = automatic
 #authby = rsasig
 #or, to use psk:
 #simple psk: dd if=/dev/random count=1000 | md5sum
 #CHANGE THESE ALL
 authby = psk
 psk-secret = 69116c07213b877f5cd9ed96c7796be4 
-#Change to override automatic detection
-#ipsec-interface = eth2
-ipsec-interface = automatic
+
 
 #uncomment to allow automatic RSA key generation
 #note: these are _PUBLIC_ keys. providing them assumes that /etc/ipsec.secrets is already in place.
